welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:1: error: not found: value growFlowers
growFlowers()
^FlowerPot:3: error: not found: value fleur
  fleur(Color.red)
  ^FlowerPot:5: error: not found: value fleur
  fleur(Color.cyan)
  ^FlowerPot:11: error: not found: value fleur
  fleur(Color.orange)
  ^FlowerPot:16: error: not found: value fleur
  fleur(Color.pink)
  ^FlowerPot:18: error: not found: value fleur
  fleur(Color.green)
  ^FlowerPot:21: error: not found: value fleur
fleur(c:Color)
^FlowerPot:21: error: not found: value c
fleur(c:Color)
      ^FlowerPot:23: error: not found: value c
  setCouleurBrosse(c)
                   ^