welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
growFlowers()
{
  fleur(Color.red)
  avance(3)
  fleur(Color.cyan)
  recule(6)
  droite()
  avance(2)
  gauche()
  avance(2)
  fleur(Color.orange)
  recule(3)
  droite()
  avance(2)
  gauche()
  fleur(Color.pink)
  avance(3)
  fleur(Color.green)
}

fleur(c:Color)
{
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  droite()
  avance()
  recule(2)
  avance()
  setCouleurBrosse(Color.yellow)
  gauche()
  leveBrosse()
}
